# agentic-ai-engineering

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  Makefile  README.md  SETUP.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  trigger-website-rebuild.yml
01-foundations/: CHEATSHEET.md  README.md  marp.config.mjs  package.json  workshop-intro.md  workshop-prompts.md  workshop.md
01-foundations/01-simple-llm-call/: 01_llm_call_anthropic.py  02_llm_call_openai.py  03_llm_call_litellm.py  04_llm_call_gemini.py  README.md  pyproject.toml
01-foundations/02-prompt-engineering/: 01_system_prompts_anthropic.py  02_system_prompts_openai.py  03_few_shot_cot_anthropic.py  04_few_shot_cot_openai.py  05_structured_output_anthropic.py  06_structured_output_openai.py  README.md  pyproject.toml
01-foundations/03-chat/: 01_chat_anthropic.py  02_chat_openai.py  README.md  pyproject.toml
01-foundations/04-tool-use/: 01_tool_use_anthropic.py  02_tool_use_openai.py  README.md  pyproject.toml
01-foundations/05-agent-loop/: 01_agent_loop_anthropic.py  01_minimal_agent.py  02_agent_loop_openai.py  02_coding_agent_anthropic.py  03_coding_agent_openai.py  README.md  pyproject.toml
01-foundations/06-codebase-navigator/: 01_codebase_navigator.py  01_codebase_navigator_openai.py  README.md  pyproject.toml
01-foundations/06-codebase-navigator/indexer/: chunker.py
01-foundations/06-codebase-navigator/store/: memory.py
01-foundations/06-codebase-navigator/tools/: repo.py
01-foundations/diagrams/: diagram-01.mmd  diagram-02.mmd  diagram-03.mmd  diagram-04.mmd  diagram-05.mmd  diagram-06.mmd  diagram-07.mmd  diagram-08.mmd  mmdc-config.json
02-effective-agents/: README.md
02-effective-agents/01-augmented-llm/: .gitignore  01_augmented_llm.py  README.md  pyproject.toml
02-effective-agents/01-prompt-chaining/: 01_prompt_chaining.py  README.md
02-effective-agents/02-prompt-chaining/: 01_prompt_chaining.py  README.md  pyproject.toml
02-effective-agents/02-routing/: 01_routing.py  README.md
02-effective-agents/03-parallelization/: 01_parallelization.py  README.md  pyproject.toml
02-effective-agents/03-routing/: 01_routing.py  README.md  pyproject.toml
02-effective-agents/04-orchestrator-workers/: 01_orchestrator_workers.py  README.md  pyproject.toml
02-effective-agents/04-parallelization/: 01_parallelization.py  README.md
02-effective-agents/05-evaluator-optimizer/: 01_evaluator_optimizer.py  README.md  pyproject.toml
02-effective-agents/05-orchestrator-workers/: 01_orchestrator_workers.py  README.md
02-effective-agents/06-evaluator-optimizer/: README.md  (+1 more)
02-effective-agents/07-content-writer/: 01_content_writer.py  README.md  pyproject.toml
02-effective-agents/07-content-writer/content_writer/: __init__.py  agent.py  tools.py
02-effective-agents/07-human-in-the-loop/: 01_human_in_the_loop.py  README.md  pyproject.toml
03-advanced-techniques/: README.md
03-advanced-techniques/01-structured-output/: 01_structured_output_anthropic.py  02_structured_output_openai.py  README.md  pyproject.toml
03-advanced-techniques/02-streaming/: 01_streaming_fundamentals.py  02_streaming_agent.py  README.md  pyproject.toml
03-advanced-techniques/03-context-engineering/: 01_context_engineering_anthropic.py  02_tool_context_anthropic.py  README.md  database.json  pyproject.toml
03-advanced-techniques/04-cost-optimization/: 01_prompt_caching_anthropic.py  02_model_routing_anthropic.py  README.md  pyproject.toml
03-advanced-techniques/06-rag-techniques/: 01_rag_pipeline_anthropic.py  02_agentic_rag_anthropic.py  README.md  pyproject.toml
03-advanced-techniques/06-rag-techniques/rag/: __init__.py  chunker.py  embedder.py  reranker.py  retriever.py  store.py
03-advanced-techniques/06-rag-techniques/sample_docs/: api_reference.md  architecture_guide.md  deployment_guide.md  troubleshooting.md
03-advanced-techniques/07-multimodal/: 01_vision_anthropic.py  02_image_generation_gemini.py  03_audio_openai.py  README.md  pyproject.toml
03-advanced-techniques/10-guardrails/: 01_guardrails_anthropic.py  README.md  pyproject.toml
03-advanced-techniques/10-guardrails/safety/: __init__.py  input_guard.py  output_guard.py
04-frameworks/: README.md
04-testing-evaluation/: README.md
04-testing-evaluation/01-unit-testing-agents/: 01_mock_llm_testing.py  01_run_tests.py  02_tool_testing.py  03_behavioral_contracts.py  04_integration_testing.py  README.md  pyproject.toml
04-testing-evaluation/01-unit-testing-agents/shared/: __init__.py  agent.py  mock_helpers.py  tools.py
04-testing-evaluation/01-unit-testing-agents/tests/: conftest.py  test_behavioral_contracts.py  test_integration.py  test_mock_llm.py  test_tools.py
04-testing-evaluation/02-evals/: 01_code_based_graders.py  02_llm_as_judge.py  03_eval_pipeline.py  README.md  pyproject.toml
04-testing-evaluation/02-evals/datasets/: golden_tasks.json
04-testing-evaluation/02-evals/shared/: __init__.py  agent.py  graders.py  knowledge_base.py
04-testing-evaluation/05-benchmarking/: 01_model_comparison.py  02_prompt_comparison.py  03_benchmark_suite.py  README.md  pyproject.toml
04-testing-evaluation/05-benchmarking/shared/: __init__.py  knowledge_base.py  models.py
04-testing-evaluation/06-eval-frameworks/: 01_promptfoo.py  02_braintrust_autoevals.py  03_langfuse.py  README.md  assertion_keywords.py  provider_agent.py  pyproject.toml
04-testing-evaluation/06-eval-frameworks/shared/: __init__.py  knowledge_base.py
04-testing-evaluation/07-eval-harness/: 01_eval_harness.py  README.md  pyproject.toml
04-testing-evaluation/07-eval-harness/datasets/: adversarial_tasks.json  golden_tasks.json
04-testing-evaluation/07-eval-harness/eval_harness/: __init__.py  agent.py  benchmark.py  red_team.py  tracer.py
05-testing-evaluation/: README.md
05-testing-evaluation/04-red-teaming-safety/: 01_prompt_injection.py  02_guardrail_testing.py  03_automated_red_team.py  README.md  pyproject.toml
06-production/: README.md
cli/: __init__.py  main.py
common/: pyproject.toml
(+88 files in other folders)
