[project]
name = "lesson-tool-use"
version = "0.1.0"
description = "Lesson 4: Tool use - enabling LLMs to call functions (Anthropic & OpenAI)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",  # Anthropic API client
    "openai>=1.0.0",  # OpenAI API client
    "python-dotenv>=1.0.0",  # Environment variable management
    "rich>=13.7.0",  # Beautiful terminal output
]

[tool.ruff]
line-length = 100
target-version = "py311"
