[project]
name = "lesson-content-writer"
version = "0.1.0"
description = "Full Agent — content writer combining all workflow patterns"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "common",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "tenacity>=8.0.0",
]

[tool.uv.sources]
common = { path = "../../common", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"
