[project]
name = "lesson-human-in-the-loop"
version = "0.1.0"
description = "Human-in-the-Loop — strategic checkpoints for human review and approval"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "common",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[tool.uv.sources]
common = { path = "../../common", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"
