[project]
name = "lesson-multimodal"
version = "0.1.0"
description = "Multimodal agents — vision, image generation, and audio"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.76.0",
    "common",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[tool.uv.sources]
common = { path = "../../common", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"
