[project]
name = "lesson-benchmarking"
version = "0.1.0"
description = "Lesson: Benchmarking - Model, prompt, and architecture comparison"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "common",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[tool.uv.sources]
common = { path = "../../common", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"
